--- a/app/src/main/res/layout/dish_card_view.xml
+++ b/app/src/main/res/layout/dish_card_view.xml
@@ -21,8 +21,9 @@
 
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="match_parent"
-                android:src="@android:drawable/checkbox_on_background"
+                android:layout_centerHorizontal="true"
+                android:layout_width="@dimen/album_cover_height"
+                android:src="@drawable/ic_recipe_default"
                 android:layout_height="@dimen/album_cover_height"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:scaleType="fitXY" />
